<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="activity"
            type="com.selvashc.webtools.businfo.view.activity.SubwayStopInfoActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:paddingBottom="10dp">

            <com.jawon.han.widget.HanTextView
                android:id="@+id/region_select_spinner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:text="@string/select_region" />

            <com.jawon.han.widget.HanSpinner
                android:id="@+id/region_select_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/region_select_spinner_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="50dp">

            <com.jawon.han.widget.HanTextView
                android:id="@+id/subway_stop_edittext_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:text="@string/bus_stop_name" />

            <com.jawon.han.widget.HanEditText
                android:id="@+id/subway_stop_edittext"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="400dp"
                android:labelFor="@+id/subway_stop_edittext_label" />

            <com.jawon.han.widget.HanButton
                android:id="@+id/search_subway_stop_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->activity.onClickedSearchSubwayStop()}"
                android:text="@string/search" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subway_stop_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="50dp"
            android:visibility="gone">

            <com.jawon.han.widget.HanTextView
                android:id="@+id/search_subway_stop_listview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/serach_bus_stop_result" />

            <com.jawon.han.widget.HanListView
                android:id="@+id/search_subway_stop_listview"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="7"
                android:labelFor="@+id/search_subway_stop_listview_label" />

            <com.jawon.han.widget.HanButton
                android:id="@+id/advance_search__button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->activity.onClickedSearchSubwayArrive()}"
                android:text="@string/advanced_search" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subway_arrive_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="50dp"
            android:visibility="gone">

            <com.jawon.han.widget.HanTextView
                android:id="@+id/search_subway_arrive_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/subway_arrive_info" />

            <com.jawon.han.widget.HanListView
                android:id="@+id/search_subway_arrive_listview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="6"
                android:labelFor="@+id/search_bus_arrive_label" />

            <com.jawon.han.widget.HanButton
                android:id="@+id/add_bookmark_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->activity.onClickedAddBookMark()}"
                android:text="@string/add_bookmark" />
        </LinearLayout>

    </LinearLayout>
</layout>